# yew-input-tutorial

./: Cargo.toml  readme.md  style.scss
src/: double_inputs.rs  input_texts.rs  main.rs  multi_inputs.rs
src/double_inputs/: double_input_v1.rs  double_input_v2.rs  double_input_value.rs
src/input_texts/: input_text_v1.rs  input_text_v2.rs  input_text_v3.rs
src/multi_inputs/: multi_input_v1.rs  multi_input_v2.rs  multi_input_value.rs
