[package]
name = "yew_simple_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.*", features = ["csr"]}
wasm-bindgen = "0.2"
strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3"
features = [
    "EventTarget",
    "HtmlInputElement",
    "HtmlSelectElement"
]